add basic lock-free queue + bench

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,13 +1,30 @@
 cmake_minimum_required(VERSION 3.27.0)
 
-project(cpp_template)
+include(FetchContent)
+
+project(mybench)
 
 set(CMAKE_MODULE_PATH "${PROJECT_SOURCE_DIR}/cmake" ${CMAKE_MODULE_PATH})
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g")
 
-add_subdirectory(third_party)
+FetchContent_Declare(googletest
+        GIT_REPOSITORY https://github.com/google/googletest.git
+        GIT_TAG v1.14.x)
+
+FetchContent_Declare(googlebenchmark
+        GIT_REPOSITORY https://github.com/google/benchmark.git
+        GIT_TAG v1.8.4) # need main for benchmark::benchmark
+
+FetchContent_MakeAvailable(
+        googletest
+        googlebenchmark)
+# add_subdirectory(third_party)
+# set(benchmark_DIR third_party/benchmark/cmake)
+
+include_directories(src/lib)
 add_subdirectory(src)
 
 option(ENABLE_TESTS "Enable tests" OFF)
